packages/pulse-core/force-app/main/default/objects/Agent_Thread__c/Agent_Thread__c.object-meta.xml
<CustomObject>
    <label>Agent Thread</label>
    <pluralLabel>Agent Threads</pluralLabel>
    <nameField>
        <label>Thread Number</label>
        <displayFormat>AT-{00000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>One Agent Mode thread per Workflow Instance. Persists the agent persona, autonomy level, rolling summary, and status.</description>
</CustomObject>