packages/pulse-core/force-app/main/default/objects/Agent_Thread__c/fields/Autonomy_Level__c.field-meta.xml
<CustomField>
    <fullName>Autonomy_Level__c</fullName>
    <label>Autonomy Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Propose_Only</fullName>
                <label>Propose Only</label>
            </value>
            <value>
                <fullName>Act_With_Approval</fullName>
                <default>true</default>
                <label>Act With Approval</label>
            </value>
            <value>
                <fullName>Autonomous_Safe</fullName>
                <label>Autonomous (Safe Tools)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>