packages/pulse-core/force-app/main/default/objects/Agent_Thread__c/fields/Last_Error__c.field-meta.xml
<CustomField>
    <fullName>Last_Error__c</fullName>
    <label>Last Error</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>