packages/pulse-core/force-app/main/default/objects/Agent_Thread__c/fields/Persona_Name__c.field-meta.xml
<CustomField>
    <fullName>Persona_Name__c</fullName>
    <label>Persona Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>