packages/pulse-core/force-app/main/default/objects/Agent_Thread__c/fields/Rolling_Summary__c.field-meta.xml
<CustomField>
    <fullName>Rolling_Summary__c</fullName>
    <label>Rolling Summary</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>