packages/pulse-core/force-app/main/default/objects/Agent_Thread__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Idle</fullName>
                <default>true</default>
                <label>Idle</label>
            </value>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>Waiting_For_User</fullName>
                <label>Waiting For User</label>
            </value>
            <value>
                <fullName>Paused</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>