packages/pulse-core/force-app/main/default/objects/Agent_Thread__c/fields/System_Prompt__c.field-meta.xml
<CustomField>
    <fullName>System_Prompt__c</fullName>
    <label>System Prompt</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>