packages/pulse-core/force-app/main/default/objects/Agent_Thread__c/fields/Workflow_Instance__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Instance__c</fullName>
    <label>Workflow Instance</label>
    <type>MasterDetail</type>
    <referenceTo>Workflow_Instance__c</referenceTo>
    <relationshipLabel>Agent Threads</relationshipLabel>
    <relationshipName>Agent_Threads</relationshipName>
</CustomField>